objects/Occupancy_Log__c.object
<CustomObject>
    <label>Occupancy Log</label>
    <nameField>
        <displayFormat>OL{0000000}</displayFormat>
        <label>Occupancy Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Occupancy Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Bed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bed</label>
        <referenceTo>Bed__c</referenceTo>
        <relationshipLabel>Occupancy Logs</relationshipLabel>
        <relationshipName>Occupancy_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resident</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Occupancy Logs</relationshipLabel>
        <relationshipName>Occupancy_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apartment</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Occupancy Logs</relationshipLabel>
        <relationshipName>Occupancy_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <label>Occupancy</label>
        <referenceTo>Occupancy__c</referenceTo>
        <relationshipLabel>Occupancy Logs</relationshipLabel>
        <relationshipName>Occupancy_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level_of_Care__c</fullName>
        <label>Level of Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Housing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_Out_Reason__c</fullName>
        <label>Move Out Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asked to leave: Behavioral</fullName>
                </value>
                <value>
                    <fullName>Asked to leave: Non-payment</fullName>
                </value>
                <value>
                    <fullName>Care level not available</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Distance from family</fullName>
                </value>
                <value>
                    <fullName>Not able to afford any longer</fullName>
                </value>
                <value>
                    <fullName>Rehab</fullName>
                </value>
                <value>
                    <fullName>Short-term stay</fullName>
                </value>
                <value>
                    <fullName>Unhappy: Care issues</fullName>
                </value>
                <value>
                    <fullName>Unhappy: Management</fullName>
                </value>
                <value>
                    <fullName>Unhappy: Programming</fullName>
                </value>
                <value>
                    <fullName>Value does not justify price</fullName>
                </value>
                <value>
                    <fullName>Went to Another Community</fullName>
                </value>
                <value>
                    <fullName>Went to Another Watermark Community</fullName>
                </value>
                <value>
                    <fullName>Discharge Home</fullName>
                </value>
                <value>
                    <fullName>Discharge to Hospital</fullName>
                </value>
                <value>
                    <fullName>Discharge to Another SNF</fullName>
                </value>
                <value>
                    <fullName>Discharge to Hospice</fullName>
                </value>
                <value>
                    <fullName>Discharge to Acute Rehab</fullName>
                </value>
                <value>
                    <fullName>Discharge Against Medical Advice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Transfer</fullName>
        <active>true</active>
        <label>Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Initial_Move_In</fullName>
        <active>true</active>
        <label>Initial Move In</label>
    </recordTypes>
</CustomObject>